--- a/css/style-home.css
+++ b/css/style-home.css
@@ -1,22 +1,47 @@
-.house {
-	color: grey
+html, body {
+	font-family: helvetica;
+	margin: -8px 0 0 0;
+	/*background-color: #c6b8bc;*/
+}
+header{
+	padding: 1px 0 1px 0;
+	text-align: center;
+	font-size: 25px;
+	background-color: #967070;	
+}
+header a {
 
+	color: white;
+	text-decoration: none;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-.head1 {
-	color: green
+.sticky + .content {
+  padding-top: 60px;
 }
-
-header {
-	background-color: black
-	margin: 1;
+.globalnavbar{
+	text-align: center;
+	background-color: #800000;
+	width: 100%;
+	height:44px;
+	margin: 0;
 }
-
-ul {
-	text-align: left;
-}
-
-
-header li {
+.globalnavbar li{
 	display: inline-block;
+	padding:0 20px 0 0;
+	font-size: 24px;
+	text-decoration: none;
+	color: #c6c6b3;
+    margin: -16px 0px;
+}
+.globalnavbar li a{
+	text-decoration:none;
+}
+.head1 {
+	text-decoration: none;
+	color: #c6c6b3;
 }
