--- a/css/style-index.css
+++ b/css/style-index.css
@@ -4,7 +4,7 @@ html, body {
 }
 header {
 	background-color: #800000;
-	padding: 40px;
+	padding: 10px;
 	text-align: center;
 }
 header h1 {
@@ -15,7 +15,7 @@ header img {
 	width: 300px;
 }
 body {
-	background-color: #c6b8bc;
+	background-color: #967070/*#c6b8bc*/;
 }
 body ul li{
 	display: inline-block;
